Fix dropmarker type=menu-button after bug 1799343
Categories
(Thunderbird :: Upstream Synchronization, defect)
Tracking
(thunderbird_esr102 unaffected)
Tracking | Status | |
---|---|---|
thunderbird_esr102 | --- | unaffected |
People
(Reporter: freaktechnik, Assigned: freaktechnik)
References
Details
Attachments
(2 files)
+++ This bug was initially created as a clone of Bug #1799343 +++
After some test builds it appears that our menu-button dropmarkers are broken after applying the commit from bug 1799343.
Not quite sure yet why exactly, but I assume some of the magic that made the menu-button dropmarker work before isn't working anymore.
By menu-button dropmarkers I mean dropmarkers generated by this: https://searchfox.org/comm-central/rev/5df9c49a11c1eddae1a8372ccea21cea6f605753/mail/base/content/widgets/toolbarbutton-menu-button.js#35-36
Comment 1•3 years ago
|
||
The selector in:
:is(toolbarbutton[type="menu"], button[type="menu"], menulist, menu) > :is(menupopup, panel) {
Is not accounting for type="menu-button"
. Can you just s/menu-button/button
? It's weird that thunderbird would have this extra piece of magic:
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 2•3 years ago
|
||
Comment 3•3 years ago
|
||
It broke in bug 1799343, and the TB folks are using type="menu", so
let's remove this.
Comment 5•3 years ago
|
||
bugherder |
Updated•3 years ago
|
Pushed by alessandro@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/07ed16f41179
Use type="menu" instead of type="menu-button". r=Paenglab
Updated•3 years ago
|
Description
•