Bug 1800072 - Remove special-case for XUL type="menu-button". r=jfkthame

It broke in bug 1799343, and the TB folks are using type="menu", so
let's remove this.

Differential Revision: https://phabricator.services.mozilla.com/D161795